<resources>
    <string name="app_name">Unipi Audio Stories</string>
    <!-- Login -->
    <string name="login_text">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="new_user_text">new user?</string>
    <string name="button_login">Login</string>
    <!-- Main -->
    <string name="top_right_image_desc">Profile Image</string>
    <!-- Register -->
    <string name="register_text">Register</string>
    <string name="already_a_user_text">Already a user?</string>
    <string name="button_register">Register</string>
    <string name="emailText2">E-mail</string>
    <string name="passwordText2">Password</string>
    <!-- Home -->

    <!-- Library -->

    <!-- Player -->

    <string name="selected_image">Selected image</string>
    <string name="title_placeholder">Title</string>
    <string name="author_placeholder">Author</string>
    <string name="year_placeholder">Year</string>
    <string name="start_icon">Start</string>
    <string name="pause_icon">Pause</string>
    <!-- Search -->
    <string name="not_yet">not yet</string>
    <string name="search_edit_text">What are you looking for?</string>
    <!-- Slidepanel -->
    <string name="insert_pic">Insert a picture</string>
    <string name="Statistics">Statistics</string>
    <string name="change_to_German">Change to German</string>
    <string name="change_to_Greek">Change to Greek</string>
    <string name="logout">Logout</string>

    <!-- nav_menu -->
    <string name="nav_home">Main Page</string>
    <string name="nav_search">Search</string>
    <string name="nav_library">Installs</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_text_available"> texts not available</string>

    <!-- statistics -->
    <string name="titleTextView">Story title:</string>
    <string name="timeTextView">Listening Time:</string>
    <string name="countTextView">Listening Count:</string>
    <string name="titleText">Your Statistics</string>
</resources>