<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerFragment">

    <!-- Εικόνα που επιλέχθηκε -->
    <ImageView
        android:id="@+id/imageViewSelected"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/selected_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleTextView"
        app:layout_constraintHeight_percent="0.4" /> <!-- Τοποθετημένο στο 40% του ύψους -->

    <!-- Τίτλος -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="217dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewSelected" />

    <ImageView
        android:id="@+id/iconRight"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/download"
        app:layout_constraintStart_toEndOf="@id/titleTextView"
        app:layout_constraintTop_toTopOf="@id/titleTextView" />


    <!-- Συγγραφέας -->
    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/author_placeholder"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Έτος -->
    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/year_placeholder"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/authorTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Icons Start και Pause -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iconStart"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/start"
            android:contentDescription="@string/start_icon" />

        <ImageView
            android:id="@+id/iconPause"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/pause3"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/pause_icon"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
